[gd_scene load_steps=12 format=2]

[ext_resource path="res://entities/world/CameraSwitch.gd" type="Script" id=1]
[ext_resource path="res://assets/textures/switchBase.png" type="Texture" id=2]
[ext_resource path="res://assets/shaders/Glow.gdshader" type="Shader" id=3]
[ext_resource path="res://assets/textures/switchOn.png" type="Texture" id=4]
[ext_resource path="res://assets/textures/switchOff.png" type="Texture" id=5]
[ext_resource path="res://assets/shaders/Outline.gdshader" type="Shader" id=6]
[ext_resource path="res://assets/textures/spotlight-circle-wide.png" type="Texture" id=7]

[sub_resource type="CircleShape2D" id=1]
radius = 67.5296

[sub_resource type="ShaderMaterial" id=7]
render_priority = 4
shader = ExtResource( 6 )
shader_param/color = Color( 0.498039, 0.545098, 0.85098, 1 )
shader_param/width = 10.0
shader_param/pattern = 1
shader_param/inside = false
shader_param/add_margins = true

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 3 )
shader_param/shine_color = Color( 1, 1, 1, 1 )
shader_param/shine_speed = 2.0
shader_param/shine_size = 0.02

[sub_resource type="ShaderMaterial" id=4]
shader = ExtResource( 3 )
shader_param/shine_color = Color( 1, 1, 1, 1 )
shader_param/shine_speed = 2.0
shader_param/shine_size = 0.02

[node name="CameraSwitch" type="Area2D"]
z_index = -1
collision_layer = 0
collision_mask = 8
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, 0 )
shape = SubResource( 1 )

[node name="Glow" type="Sprite" parent="."]
visible = false
material = SubResource( 7 )
position = Vector2( 0.25, 0 )
scale = Vector2( 0.299107, 0.3 )
texture = ExtResource( 2 )

[node name="Base" type="Sprite" parent="."]
material = SubResource( 3 )
position = Vector2( -231, 428 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 2 )
offset = Vector2( 770, -1426.67 )

[node name="On" type="Sprite" parent="."]
material = SubResource( 4 )
scale = Vector2( 0.291667, 0.261719 )
texture = ExtResource( 4 )

[node name="Off" type="Sprite" parent="."]
visible = false
material = SubResource( 4 )
position = Vector2( 7.15256e-07, -1.5 )
scale = Vector2( 0.291667, 0.226563 )
texture = ExtResource( 5 )

[node name="Light-Switch" type="Light2D" parent="."]
light_mask = 16
scale = Vector2( 0.162556, 0.357143 )
texture = ExtResource( 7 )
texture_scale = 2.68
color = Color( 1, 1, 1, 0.560784 )
energy = 1.5
range_layer_min = -1
range_layer_max = 2
range_item_cull_mask = 17
shadow_color = Color( 0.0470588, 0.0431373, 0.0431373, 0 )

[connection signal="body_entered" from="." to="." method="_on_CameraSwitch_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_CameraSwitch_body_exited"]
